# project-lewis

./: .dockerignore  .dvcignore  .flake8  .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  PLAN.md  PROVENANCE.md  README.md  README_EXECUCAO.md  docker-compose.yml  mcp.json  pyproject.toml  requirements.txt  requirements_detailed.md  sonar-project.properties
.github/workflows/: ci.yml  data-quality-audit.yml  ingest.yml  model.yml  quality-gates.yml
config/: finetune_v1.0.yaml  finetune_v1.1.yaml  knowledge_v2.0.yaml  preprocess_v1.0.yaml  pretrain_v1.0.yaml  pretrain_v1.1.yaml  stage1_binary.yaml  stage2_multiclass.yaml
docs/: Camada-01-Ingestao-v1.1.md  Camada-02-Resample-Preprocessamento-v1.1.md  Camada-03-Feature-Engineering-v1.1.md  Camada-04-Modelagem-v1.1.md  Camada-05-Quantizacao-Exportacao-v1.1.md  Camada-06-Validacao-Quality-Gates-v1.1.md  Camada-07-Integracao-DevOps-v1.1.md  Camada-08-Firmware-v1.1.md  Camada-09-Energia-v1.4.md  Camada-09-Simulacao-v1.1.md  DEBITO_TECNICO_Energia_Renode-v1.4.md  ESPECIFICACAO_Fase1_Agentes-v1.1.md  SDD-C11-Knowledge-Impl-v1.0.md  SDD-C11-Knowledge-Impl-v2.0.md  SDD_Project-Lewis_v3.md  SDD_Sistema_Leitura_Hardware_Automatico.md  SIMULATION_LIMITS.md  UNIFIED_DOCUMENT_v2.0.md
docs/superpowers/: branching-workflow.md  slha_conformity_checklist.md
firmware/: Makefile  stm32f407vg.ld  stm32f407vg_48k.ld  stm32f407vg_harness.ld
firmware/config/: power_model_v1.4.yaml
firmware/renode/: FidelityKeywords.py  arena_48k.resc  arena_48k.robot  dummy_spi_device.py  fault_injection.robot  fidelity.robot  harness.resc  stm32f4_discovery.resc  test_shutdown.robot  watchdog.robot
firmware/scripts/: energy_reporter.py  generate_harness_fixtures.py  install_deps.sh  install_tflm.sh  run_harness.py  run_renode_tests.py
firmware/tests/: harness.c  harness.h  harness_main.c  test_dsp.c  test_inference.cpp  test_pipeline.c  test_r_peak.c
models/quantized/: model_int8.h  model_int8.tflite  quantization_params.h  quantization_params.json  stage1_int8_v2.0.tflite  stage2_int8_v2.0.tflite
notebooks/: 03_architecture_cnn_lstm.ipynb
reports/: auth_audit_report.md  quality_report.md  training_data_audit.md  training_status_v1.1.md  training_status_v2.0.md  training_status_v2.1.md  training_status_v2.2.md  two_stage_evaluation_v2.0.md
scripts/: audit_training_data.py  check_environment.py  generate_filter_coeffs.py  generate_quality_report.py  install_firmware_tools.sh  memory_commit.py  prepare_two_stage_datasets.py  quantize_finetuned_v1.1.py  quantize_two_stage_v2.0.py  run_finetune_groupkfold.py  run_hard_gates.py  run_stage1_training.py  run_stage2_training.py  run_two_stage_pipeline.py  validate_firmware_deliverables.py  validate_knowledge_index.py
src/data/: _catalog.py  _compliance.py  _downloader.py  _downloader_replay.py  _schemas.py  aggregator.py  annotations.py  augmentation.py  chapman_labels.py  checksums.json  (+10 more)
tests/: conftest.py  test_ampt.py  test_arena_limits.py  test_augmentation.py  test_data_leakage.py  test_download.py  test_download_smoke.py  test_dsp_fidelity.py  test_dsp_filters.py  test_evaluate.py  test_fault_injection.py  test_features.py  test_fidelity.py  test_finetune.py  test_firmware_qg.py  test_loader.py  test_model.py  test_native_tflm.py  test_pipeline.py  test_prepare_two_stage_datasets.py  test_preprocessing.py  test_pretrain.py  test_quantization.py  test_r_peak_firmware.py  test_renode_runner.py  test_resampler.py  test_run_stage_training.py  test_segmenter.py  test_slha_decision.py  test_slha_discovery.py  test_slha_integration.py  test_slha_monitor.py  test_slha_training_integration.py  test_slha_warmup.py  test_tflm_bitexact.py  test_tracking_cli.py  test_tracking_db.py  test_tracking_integration.py  test_training_data_audit.py  test_two_stage_pipeline.py  (+1 more)
(+107 files in other folders)
