[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-lewis"
version = "1.0.0"
description = "Sistema Cardíaco Autônomo de Borda — Pipeline de Dados + Ciência de Dados para ECG"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Douglas Souza", email = "douglas@example.com" },
]
keywords = ["ecg", "tensorflow-lite", "edge-ai", "physionet", "aami"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "wfdb>=4.1.2",
    "numpy>=1.26.4",
    "scipy>=1.11.4",
    "pandas>=2.1.4",
    "pyarrow>=14.0.1",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "tensorflow>=2.21.0",
    "scikit-learn>=1.4.0",
    "imbalanced-learn>=0.12.0",
    "kagglehub",
    "joblib>=1.3.2",
]

[project.urls]
Homepage = "https://github.com/douglas-souza/Project-Lewis"
Repository = "https://github.com/douglas-souza/Project-Lewis"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.7",
    "pre-commit>=3.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
default-groups = ["dev"]

[tool.black]
line-length = 100
target-version = ["py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.venv
  | \.git
  | \.pytest_cache
  | \.mypy_cache
  | __pycache__
  | notebooks
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "^\\.venv/",
    "^\\.git/",
    "^__pycache__/",
]

[tool.flake8]
exclude = [".venv", "__pycache__", ".git", ".pytest_cache"]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "__pycache__"]
skips = ["B101", "B311"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"
filterwarnings = [
    # TensorFlow 2.21 + gast on Python 3.13: upstream AST kwarg deprecation.
    "ignore:.*got an unexpected keyword argument '___pyct_anno'.*:DeprecationWarning:gast.*",
    # TFLite converter: input statistics not supplied; benign given our PTQ pipeline.
    "ignore:Statistics for quantized inputs were expected.*:UserWarning:tensorflow.*",
    # tf.lite.Interpreter deprecation; migration tracked separately.
    "ignore:.*tf.lite.Interpreter is deprecated.*:UserWarning:tensorflow.*",
]
markers = [
    "qg0: Quality Gate 0 — ingestão e catalogação",
    "qg1: Quality Gate 1 — resample e pré-processamento",
    "qg2: Quality Gate 2 — segmentação",
    "qg3: Quality Gate 3 — feature engineering",
    "qg4: Quality Gate 4 — modelagem",
    "qg5: Quality Gate 5 — quantização e exportação",
    "qg6: Quality Gate 6 — validação e quality gates",
    "qg7: Quality Gate 7 — build do firmware",
    "qg8: Quality Gate 8 — bit-exatidão TFLM",
    "qg9: Quality Gate 9 — latência e memória do firmware",
    "qg10: Quality Gate 10 — fidelidade numérica vs ground-truth",
    "qg11: Quality Gate 11 — fault injection SPI/UART",
    "qg12: Quality Gate 12 — limites de arena RAM",
    "qg13: Quality Gate 13 — watchdog software de inferencia",
    "qg16: Quality Gate 16 — filtros DSP bandpass/notch vs Python",
    "qg17: Quality Gate 17 — fidelidade do pipeline filtrado no firmware",
    "slow: Testes lentos (CI condicional)",
]
